# atmega-simon

./: CMakeLists.txt  Makefile  README.md  display.c  display.h  game.c  game.h  leds.c  leds.h  main.c  pinout.h  rng.c  rng.h
lib/: color.h  debounce.c  debounce.h  timebase.c  timebase.h  wsrgb.c  wsrgb.h
